added functionality for simple or scientific radio buttons

--- a/index.html
+++ b/index.html
@@ -41,11 +41,11 @@
                     <div class="calculator-type">
                         <input type="radio" name="calcType" id="simple">
                         <label for="simple">Simple</label>                    
-                        <input type="radio" name="calcType" id="scientific">                    
+                        <input type="radio" name="calcType" id="scientific" checked>                    
                         <label for="scientific">Scientific</label>
                     </div>
                     <div class="angle-units">
-                        <input type="radio" name="angle" id="deg">
+                        <input type="radio" name="angle" id="deg" checked>
                         <label for="deg">Deg</label>                    
                         <input type="radio" name="angle" id="rad">                    
                         <label for="deg">Rad</label>
